# wicked_migration_server

./: .service  Cargo.toml  README.md  basic.html  cronjob_update_build_run.sh  main.css  main.html  main.js  script.js  style.css  wicked_migration_server.service
.github/workflows/: rust.yml
src/: db_util.rs  files.rs  main.rs  migration.rs  routes.rs
static/: index.html  main.html  script.js  style.css  tar_writer.js
