[package]
name = "AgamaMirgrationServer"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = "0.5.1"
tempfile = "3.12.0"
anyhow = "1.0.87"
shlex = "1.3.0"
rusqlite = { version = "0.32.0", features = ["bundled"] }
tokio = "1.40.0"
[dependencies.uuid]
version = "1.10.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]